@@ -1,0 +1,60 @@
+.\"     Title: pam_motd
+.\"    Author: 
+.\" Generator: DocBook XSL Stylesheets v1.70.1 <http://docbook.sf.net/>
+.\"      Date: 06/03/2006
+.\"    Manual: Linux\-PAM Manual
+.\"    Source: Linux\-PAM Manual
+.\"
+.TH "PAM_MOTD" "8" "06/03/2006" "Linux\-PAM Manual" "Linux\-PAM Manual"
+.\" disable hyphenation
+.nh
+.\" disable justification (adjust text to left margin only)
+.ad l
+.SH "NAME"
+pam_motd \- Display the motd file
+.SH "SYNOPSIS"
+.HP 12
+\fBpam_motd.so\fR [motd=\fI/path/filename\fR]
+.SH "DESCRIPTION"
+.PP
+pam_motd is a PAM module that can be used to display arbitrary motd (message of the day) files after a succesful login. By default the
+\fI/etc/motd\fR
+file is shown. The message size is limited to 64KB.
+.SH "OPTIONS"
+.TP 3n
+\fBmotd=\fR\fB\fI/path/filename\fR\fR
+The
+\fI/path/filename\fR
+file is displayed as message of the day.
+.SH "MODULE SERVICES PROVIDED"
+.PP
+Only the
+\fBsession\fR
+service is supported.
+.SH "RETURN VALUES"
+.TP 3n
+PAM_IGNORE
+This is the only return value of this module.
+.SH "EXAMPLES"
+.PP
+The suggested usage for
+\fI/etc/pam.d/login\fR
+is:
+.sp
+.RS 3n
+.nf
+session  optoinal  pam_motd.so  motd=/etc/motd
+      
+.fi
+.RE
+.sp
+.SH "SEE ALSO"
+.PP
+
+\fBmotd\fR(5),
+\fBpam.conf\fR(5),
+\fBpam.d\fR(8),
+\fBpam\fR(8)
+.SH "AUTHOR"
+.PP
+pam_motd was written by Ben Collins <bcollins@debian.org>.
