@@ -5,7 +5,7 @@ Linux-PAM NEWS -- history of user-visible changes.
 * Fixed all problems found by Coverity
 * Add manual page for pam_mkhomedir, pam_umask, pam_filter,
   pam_issue, pam_ftp, pam_group, pam_lastlog, pam_listfile,
-  pam_localuser, pam_mail
+  pam_localuser, pam_mail, pam_motd
 
 Release 0.99.4.0
 
